{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 53,
  "lineage": "49f7f5d6-3971-2fcd-b0ce-8016bcefbb99",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335331351:security-group/sg-0554c12bcecc34a60",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0554c12bcecc34a60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node_group_one20240307054331842400000001",
            "name_prefix": "node_group_one",
            "owner_id": "730335331351",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05835fa5d6e49a4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_cloudquicklabs_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335331351:route-table/rtb-0ba179068f7fb4b1c",
            "default_route_table_id": "rtb-0ba179068f7fb4b1c",
            "id": "rtb-0ba179068f7fb4b1c",
            "owner_id": "730335331351",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055948ff268c413e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "timeouts": null,
            "vpc_id": "vpc-05835fa5d6e49a4b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.cloudquicklabs_gw",
            "module.vpc.aws_vpc.cloudquicklabs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudquicklabs_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335331351:internet-gateway/igw-055948ff268c413e1",
            "id": "igw-055948ff268c413e1",
            "owner_id": "730335331351",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "vpc_id": "vpc-05835fa5d6e49a4b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c16d89bb8e21e3b5",
            "route_table_id": "rtb-0ba179068f7fb4b1c",
            "subnet_id": "subnet-01ca9615125d94696"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_cloudquicklabs_default",
            "module.vpc.aws_internet_gateway.cloudquicklabs_gw",
            "module.vpc.aws_subnet.public_cloudquicklabs_subnet",
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035cca3e060464a60",
            "route_table_id": "rtb-0ba179068f7fb4b1c",
            "subnet_id": "subnet-05ba6333ce2d31d74"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_cloudquicklabs_default",
            "module.vpc.aws_internet_gateway.cloudquicklabs_gw",
            "module.vpc.aws_subnet.public_cloudquicklabs_subnet",
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_cloudquicklabs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335331351:subnet/subnet-01ca9615125d94696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca9615125d94696",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335331351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "vpc_id": "vpc-05835fa5d6e49a4b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335331351:subnet/subnet-05ba6333ce2d31d74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ba6333ce2d31d74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335331351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            },
            "vpc_id": "vpc-05835fa5d6e49a4b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cloudquicklabs",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudquicklabs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335331351:vpc/vpc-05835fa5d6e49a4b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d073c57b9295be2",
            "default_route_table_id": "rtb-0ba179068f7fb4b1c",
            "default_security_group_id": "sg-0e8bfcba317cb11ab",
            "dhcp_options_id": "dopt-00601eb6fc4ebc77b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05835fa5d6e49a4b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba179068f7fb4b1c",
            "owner_id": "730335331351",
            "tags": {
              "Name": "cloudquicklabs"
            },
            "tags_all": {
              "Name": "cloudquicklabs"
            }
          }
        }
      ]
    }
  ]
}